--- a/app/globals.css
+++ b/app/globals.css
@@ -7,31 +7,37 @@ body {
 }
 
 @layer components {
+    /* Base Table */
     .table__outer {
         @apply overflow-x-auto rounded-sm border-slate-200 border-2;
     }
-
     .table__base {
         @apply min-w-full divide-y-2 divide-gray-200 bg-white text-sm;
     }
-
     .table__head {
         @apply font-bold text-gray-900;
     }
-
     .table__head__row > th {
         @apply whitespace-nowrap px-4 py-2;
     }
-
     .tbody__base {
         @apply divide-y divide-gray-200 text-center;
     }
-
     .table__row {
         @apply hover:bg-slate-50 text-gray-700 hover:cursor-pointer;
     }
-
     .table__row > td {
         @apply whitespace-nowrap px-4 py-2;
     }
+
+    /* Base CardItem  */
+    .card_item__base {
+        @apply grid gap-2 bg-white hover:bg-slate-50 p-4 shadow-sm hover:cursor-pointer text-sm text-gray-700;
+    }
+
+    /* Base CardList  */
+    .card_list__base {
+        @apply grid divide-y-2 divide-gray-200 border-slate-200 border-2 rounded-sm;
+    }
+
 }
